# pythuckery

./: .pre-commit-config.yaml  pylintrc.toml  pyproject.toml
graphs/: bfs.py  dfs.py  dijkstra.py  shared.py  traveling_salesperson.py
tic-tac-toe/: board.py  game.py  main.py  utils.py
