[project]
name = "pythuckery"
version = "1.0.0"
description = "Python f*****y for fun and profit"
requires-python = ">=3.14.2"
dependencies = []

[project.optional-dependencies]
dev = [
    "black~=26.1.0",
    "flake8~=7.3.0",
    "pre-commit~=4.5.1",
    "pylint~=4.0.5"
]

[tool.black]
line-length = 88
